--- a/NubeBooks/Views/Admin/InventariosEgreso.cshtml
+++ b/NubeBooks/Views/Admin/InventariosEgreso.cshtml
@@ -58,7 +58,7 @@
                                 <td class="text-center">@item.Cantidad</td>
                                 <td class="text-center">@item.UnidadMedida</td>
                                 <td class="text-center">@item.SerieLote</td>
-                                <td class="text-center">@item.Cantidad</td>
+                                <td class="text-center">@item.StockLote</td>
                                 <td class="text-center">@item.nUsuario</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
                                 <td class="text-center">
