--- a/NubeBooks/Views/Admin/InventariosIngreso.cshtml
+++ b/NubeBooks/Views/Admin/InventariosIngreso.cshtml
@@ -59,7 +59,7 @@
                                 <td class="text-center">@item.Cantidad</td>
                                 <td class="text-center">@item.UnidadMedida</td>
                                 <td class="text-center">@item.SerieLote</td>
-                                <td class="text-center">@item.Cantidad</td>
+                                <td class="text-center">@item.StockLote</td>
                                 <td class="text-center">@(item.FechaFin != null ? item.FechaFin.GetValueOrDefault().ToString("yyyy/MM/dd", CultureInfo.CreateSpecificCulture("es-PE")) : "-")</td>
                                 <td class="text-center">@item.nUsuario</td>
                                 @{ var rIcon = ViewBag.EsUsuarioExterno ? "search" : "pencil"; var rTitle = ViewBag.EsUsuarioExterno ? "Visualizar" : "Editar"; }
