--- a/NubeBooks/Views/Admin/Comprobante.cshtml
+++ b/NubeBooks/Views/Admin/Comprobante.cshtml
@@ -1,6 +1,6 @@
 ﻿@using NubeBooks.Core.DTO
 @model ComprobanteDTO
-@{ 
+@{
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml";
 }
 @section Styles{
@@ -42,14 +42,11 @@
                         if ($(this).val() == valorArea) existe = true;
                     });
                     if (!existe) {
-                        //var element = $('<option/>', {})
                         $('#lstMontos').append($('<option>', {
                             value: valorArea,
                             text: txtArea + ' - ' + txtMonto
                         }).attr('data-monto', txtMonto));
-                        //$('#IdArea :selected').attr('disabled', true);
-                        /*var optionvalida = $('#IdArea option:not([disabled])').first().val();
-                        $('#IdArea').val(optionvalida).change();*/
+
                         $('#IdArea').select2("val", 0);
                         ActualizarMontos();
                     } else {
@@ -63,7 +60,6 @@
                 var val = $('#lstMontos :selected').val();
                 var text = $('#lstMontos :selected').text();
 
-                //$('#IdArea option[value="'+ val +'"]').attr('disabled', false);
                 $('#lstMontos :selected').remove();
                 ActualizarMontos();
             });
@@ -91,21 +87,33 @@
 
         function ActualizarMontoSinIGV() {
             var montoSinIGV = 0;
-            var numTipoDoc = $('#IdTipoDocumento').select2("val");
+            /*var numTipoDoc = $('#IdTipoDocumento').select2("val");
             if (numTipoDoc != 3 && numTipoDoc != 4 && numTipoDoc != 7)
             { montoSinIGV = ($('#Monto').val() / 1.18).toFixed(2); }
             else
+            { montoSinIGV = ($('#Monto').val() / 1).toFixed(2); }*/
+
+            //var chkIGV = ;
+            if($('#chkIGV').is(':checked'))
+            {montoSinIGV = ($('#Monto').val() / 1.18).toFixed(2);}
+            else
             { montoSinIGV = ($('#Monto').val() / 1).toFixed(2); }
+
             $('#MontoSinIGV').val(montoSinIGV);
         }
 
         function ActualizarMontoConIGV() {
             var montoConIGV = 0;
-            var numTipoDoc = $('#IdTipoDocumento').select2("val");
+            /*var numTipoDoc = $('#IdTipoDocumento').select2("val");
             if (numTipoDoc != 3 && numTipoDoc != 4 && numTipoDoc != 7)
             { montoConIGV = ($('#MontoSinIGV').val() * 1.18).toFixed(2); }
             else
+            { montoConIGV = ($('#MontoSinIGV').val() / 1).toFixed(2); }*/
+            if($('#chkIGV').is(':checked'))
+            { montoConIGV = ($('#MontoSinIGV').val() * 1.18).toFixed(2); }
+            else
             { montoConIGV = ($('#MontoSinIGV').val() / 1).toFixed(2); }
+
             $('#Monto').val(montoConIGV);
         }
 
@@ -195,41 +203,177 @@
         }
     </script>
 }
+@{
+    string titulo = "", strTitulo = "", strFechaIni = "", strEntidad = "", strFechaFin = "";
+    if (Model != null)
+    {
+        switch (Model.IdTipoComprobante)
+        {
+            case 1:
+                strTitulo = "Ingreso";
+                strFechaIni = "Fecha Facturación";
+                strEntidad = "Cliente";
+                strFechaFin = "Cobranza";
+                break;
+            default:
+                strTitulo = "Egreso";
+                strFechaIni = "Fecha Documento";
+                strEntidad = "Proveedor";
+                strFechaFin = "Pago";
+                break;
+        }
+    }
+    titulo = ((Model == null || Model.IdComprobante == 0) ? "Nuevo" : "Actualizar") + " Comprobante - " + strTitulo;
+}
+
+<div class="bg-light lter b-b wrapper-md">
+    <h1 class="m-n font-thin h3">@titulo</h1>
+</div>
+<div class="wrapper-md" ng-controller="FormDemoCtrl">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            @using (Html.BeginForm("AddComprobante", "Admin", FormMethod.Post))
+            {
+                @Html.ValidationSummary(true)
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label class="control-label">@strFechaIni</label>
+                            <div class="input-group">
+                                @Html.TextBoxFor(u => u.FechaEmision, "{0:dd/MM/yyyy}", new { @class = "datepicker-input form-control rol-accs", @placeholder = "Fecha", @type = "text", @data_provide = "datepicker", @readonly = "true" })
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                </span>
+                                @Html.ValidationMessageFor(u => u.FechaEmision)
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <label class="control-label">Tipo de Documento</label>
+                            @Html.DropDownListFor(u => u.IdTipoDocumento, new SelectList(ViewBag.lstTipoDocumento, "IdTipoDocumento", "Nombre", Model != null ? (Model.IdTipoDocumento != 0 ? Model.IdTipoDocumento : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs", @onchange = "ActualizarMontoConIGV()" })
+                            @Html.ValidationMessageFor(u => u.IdTipoDocumento)
+                        </div>
+                        <div class="col-md-3">
+                            <label class="control-label">Número de Documento</label>
+                            @Html.TextBoxFor(u => u.NroDocumento, new { @class = "form-control rol-accs", @placeholder = "Documento", @type = "text" })
+                            @Html.ValidationMessageFor(u => u.NroDocumento)
+                        </div>
+                        <div class="col-md-3">
+                            <label>Fecha de @strFechaFin</label>
+                            <div class="input-group">
+                                @Html.TextBoxFor(u => u.FechaConclusion, "{0:dd/MM/yyyy}", new { @class = "datepicker-input form-control rol-accs", @placeholder = "Fecha de cancelación", @type = "text", @data_provide = "datepicker", @readonly = "true" })
+                                <span class="input-group-btn">
+                                    <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                </span>
+                                @Html.ValidationMessageFor(u => u.FechaConclusion)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        @{var columnas = 3; if (Model.IdTipoComprobante != 1) { columnas = 3; }}
+                        <div class="col-md-@columnas">
+                            <label class="control-label">@strEntidad</label>
+                            @Html.DropDownListFor(u => u.IdEntidadResponsable, new SelectList(Model.IdTipoComprobante == 1 ? ViewBag.lstClientes : ViewBag.lstProveedores, "IdEntidadResponsable", "Nombre", Model != null ? (Model.IdEntidadResponsable != 0 ? Model.IdEntidadResponsable : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs", @onchange = "ListarProyectos(1)" })
+                            @Html.ValidationMessageFor(u => u.IdEntidadResponsable)
+                        </div>
+                        @if (Model.IdTipoComprobante == 1)
+                        {
+                            <div class="col-md-3">
+                                <label class="control-label">Proyecto</label>
+                                @Html.TextBoxFor(u => u.IdProyecto, new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder rol-accs" })
+                                @Html.ValidationMessageFor(u => u.IdProyecto)
+                            </div>
+                        }
+                        @if (Model.IdTipoComprobante == 1)
+                        {
+                            <div class="col-md-3">
+                                <label>Consultor</label>
+                                @Html.DropDownListFor(u => u.IdResponsable, new SelectList(ViewBag.lstResponsables, "IdResponsable", "Nombre", Model != null ? (Model.IdResponsable != null ? Model.IdResponsable : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs" })
+                                @Html.ValidationMessageFor(u => u.IdResponsable)
+                            </div>
+                        }
+                        <div class="col-md-3">
+                            <label class="control-label">Partida de Presupuesto</label>
+                            @Html.TextBoxFor(u => u.IdCategoria, new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder rol-accs" })
+                            @Html.ValidationMessageFor(u => u.IdCategoria)
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label class="control-label">Moneda</label>
+                            @Html.DropDownListFor(u => u.IdMoneda, new SelectList(ViewBag.lstMonedas, "IdMoneda", "Nombre", Model != null ? (Model.IdMoneda != 0 ? Model.IdMoneda : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs" })
+                            @Html.ValidationMessageFor(u => u.IdMoneda)
+                        </div>
+                        <div class="col-md-3">
+                            <label class="control-label">Tipo de Cambio</label>
+                            @Html.TextBoxFor(u => u.TipoCambio, "{0:0.00}", new { @class = "form-control rol-accs", @placeholder = "Tipo de Cambio", @type = "text", @onkeypress = "return CheckNumericValue(event)" })
+                            @Html.ValidationMessageFor(u => u.TipoCambio)
+                        </div>
+                        @if (Model.IdTipoComprobante == 1)
+                        {
+                            <div class="col-md-3">
+                                <label class="control-label">Modalidad de Pago</label>
+                                @Html.DropDownListFor(u => u.IdHonorario, new SelectList(ViewBag.lstHonorarios, "IdHonorario", "Nombre", Model != null ? (Model.IdHonorario != null ? Model.IdHonorario : 1) : 1), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs" })
+                                @Html.ValidationMessageFor(u => u.IdHonorario)
+                            </div>
+                        }
+                        <div class="col-md-3">
+                            <label class="control-label">Área</label>
+                            @Html.DropDownListFor(u => u.IdArea, new SelectList(ViewBag.lstAreas, "IdArea", "Nombre", Model != null ? (Model.IdArea != null ? Model.IdArea : 0) : 0), new { @class = "col-xs-12 col-sm-12 col-md-12 no-padder miselect2 rol-accs" })
+                            @Html.ValidationMessageFor(u => u.IdArea)
+                            <div class="text-left">
+                                <a id="hint" class="text-info">¿Desea ingresar más de un área?</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="line line-dashed b-b line-lg pull-in"></div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <label class="control-label">Monto (sin IGV)</label>
+                            @Html.TextBoxFor(u => u.MontoSinIGV, "{0:#.00}", new { @class = "form-control rol-accs", @placeholder = "Monto Sin IGV", @type = "text", @onkeypress = "return CheckNumericValue(event)", @onkeyup = "ActualizarMontoConIGV()" })
+                            @Html.ValidationMessageFor(u => u.MontoSinIGV)
+                        </div>
+                        <div class="col-md-3">
+                            <label class="control-label">Monto Total</label>
+                            @Html.TextBoxFor(u => u.Monto, "{0:#.00}", new { @class = "form-control rol-accs", @placeholder = "Ingrese el monto", @type = "text", @onkeypress = "return CheckNumericValue(event)", @onkeyup = "ActualizarMontoSinIGV()" })
+                            @Html.ValidationMessageFor(u => u.Monto)
+                        </div>
+                        <div class="col-md-3">
+                            <label class="control-label">Afecto al IGV</label>
+                            <div>
+                                <label class="i-switch m-t-xs m-r">
+                                    <input id="chkIGV" type="checkbox" checked="" onchange="ActualizarMontoConIGV()">
+                                    <i></i>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="line line-dashed b-b line-lg pull-in"></div>
+                            }
+        </div>
+    </div>
+</div>
 
 <section class="vbox">
     <section class="scrollable padder">
         <div class="row m-b">
             <div class="col-xs-12">
-                @{
-                    string strTitulo = "", strFechaIni = "", strEntidad = "", strFechaFin = "";
-                    if (Model != null)
-                    {
-                        switch (Model.IdTipoComprobante)
-                        {
-                            case 1:
-                                strTitulo = "Ingreso";
-                                strFechaIni = "Fecha Facturación";
-                                strEntidad = "Cliente";
-                                strFechaFin = "Cobranza";
-                                break;
-                            default:
-                                strTitulo = "Egreso";
-                                strFechaIni = "Fecha Documento";
-                                strEntidad = "Proveedor";
-                                strFechaFin = "Pago";
-                                break;
-                        }
-                    }
-                }
                 @if (Model == null || Model.IdComprobante == 0)
                 {
-                    <h2>Nuevo @strTitulo</h2>
+                    <h2>Nuevo Comprobante @strTitulo</h2>
                 }
                 else
                 {
-                    <h2>Actualizar @strTitulo</h2>
+                    <h2>Actualizar Comprobante @strTitulo</h2>
                 }
-                
+
                 @using (Html.BeginForm("AddComprobante", "Admin", FormMethod.Post))
                 {
                     @Html.ValidationSummary(true)
@@ -370,20 +514,6 @@
                                         @Html.TextAreaFor(u => u.Comentario, new { @class = "form-control rol-accs", @placeholder = "Ingrese un comentario", @type = "text", @rows = "3", @style = "resize: none;" })
                                         @Html.ValidationMessageFor(u => u.Comentario)
                                     </div>
-                                    @*@if (ViewBag.EsAdmin || ViewBag.EsUsuarioInterno && Model != null && Model.IdEntidadResponsable > 0)
-                                    {
-                                        <div class="line line-dashed line-md pull-in"></div>
-                                        <div class="checkbox">
-                                            <label>
-                                                @Html.CheckBoxFor(u => u.Estado)
-                                                Activo
-                                            </label>
-                                            @Html.ValidationMessageFor(u => u.Estado)
-                                        </div>}
-                                    else
-                                    {
-                                        @Html.TextBoxFor(u => u.Estado, new { @value = Model != null ? Model.Estado : false, @type = "hidden" })
-                                    }*@
                                     <div class="line line-dashed line-md pull-in"></div>
                                     @Html.TextBoxFor(u => u.Estado, new { @value = true, @type = "hidden" })
                                     @Html.TextBoxFor(u => u.IdEmpresa, new { @value = Model.IdEmpresa, @type = "hidden" })
@@ -393,14 +523,13 @@
                                     @{var btnName = (Model != null && Model.IdEntidadResponsable > 0) ? "Guardar Cambios" : "Crear";}
                                     @if (!ViewBag.EsUsuarioExterno)
                                     {<button type="submit" class="btn btn-sm btn-success" onclick="return ListaMontosAreas();">@btnName</button>}
-                                    @*<a class="btn btn-sm btn-danger" href="@Url.Action("Comprobantes", "Admin", new { idTipoComprobante = Model.IdTipoComprobante })">Salir</a>*@
                                     @{string tipo = (Model.IdTipoComprobante == 1) ? "Ingreso" : "Egreso"; }
                                     <a class="btn btn-sm btn-danger" href="@Url.Action("Comprobantes" + tipo, "Admin")">Salir</a>
                                 </div>
                             </section>
                         </div>
                     </div>
-                }
+                                        }
             </div>
         </div>
     </section>
