--- a/NubeBooks/Views/Admin/Area.cshtml
+++ b/NubeBooks/Views/Admin/Area.cshtml
@@ -44,7 +44,7 @@ else { cadena = "Actualizar"; }
                                 <label>Estado</label>
                                 <div>
                                     <label class="i-switch m-t-xs m-r">
-                                        <input id="cmpCancelado" name="cmpCancelado" type="checkbox" checked="@Model.Estado">
+                                        <input id="Estado" name="Estado" type="checkbox" value="@Model.Estado" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
                                         <i></i>
                                     </label>
                                 </div>
