--- a/NubeBooks/Views/Admin/Proyecto.cshtml
+++ b/NubeBooks/Views/Admin/Proyecto.cshtml
@@ -4,70 +4,65 @@
     Layout = "~/Views/Shared/_LayoutAdmin.cshtml"; 
 }
 
-<section class="vbox">
-    <section class="scrollable padder">
-        <div class="row m-b">
-            <div class="col-xs-12 col-md-10 col-md-offset-1">
-                @{var cadena = "";}
-                @if (Model == null || Model.IdProyecto == 0)
+@{var cadena = "";}
+@if (Model == null || Model.IdProyecto == 0) { cadena = "Nuevo"; }
+else { cadena = "Actualizar"; }
+<div class="bg-light lter b-b wrapper-md">
+    <h1 class="m-n font-thin h3">@cadena Proyecto</h1>
+</div>
+<div class="wrapper-md" ng-controller="FormDemoCtrl">
+    <div class="panel panel-default">
+        <div class="panel-body">
+            @using (Html.BeginForm("AddProyecto", "Admin", FormMethod.Post))
+            {
+                @Html.Partial("_showAlertMessages")
+                @Html.ValidationSummary(true)
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label>Nombre del Proyecto</label>
+                            @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Nombre del Proyecto", @type = "text" })
+                            @Html.ValidationMessageFor(u => u.Nombre)
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <label>Descripción</label>
+                            @Html.TextAreaFor(u => u.Descripcion, new { @class = "form-control", @placeholder = "Ingrese la descripción", @type = "text", @rows = "6", @style = "resize: none;" })
+                            @Html.ValidationMessageFor(u => u.Descripcion)
+                        </div>
+                    </div>
+                </div>
+                if (ViewBag.EsAdmin && Model != null && Model.IdProyecto > 0)
                 {
-                    cadena = "Nuevo";
-                }
-                else
-                {
-                    cadena = "Actualizar";
-                }
-                <h2>@cadena Proyecto</h2>
-
-                @using (Html.BeginForm("AddProyecto", "Admin", FormMethod.Post))
-                {
-                    @Html.ValidationSummary(true)
-                    <div class="row m-b">
-                        <div class="col-xs-12 col-md-6">
-                            @Html.Partial("_showAlertMessages")
-
-                            <section class="panel panel-default">
-                                <header class="panel-heading font-bold">Formulario de Registro</header>
-                                <div class="panel-body">
-                                    <div class="form-group">
-                                        <label>Nombre del Proyecto</label>
-                                        @Html.TextBoxFor(u => u.Nombre, new { @class = "form-control", @placeholder = "Ingrese el nombre del Proyecto", @type = "text" })
-                                        @Html.ValidationMessageFor(u => u.Nombre)
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Descripción</label>
-                                        @Html.TextAreaFor(u => u.Descripcion, new { @class = "form-control", @placeholder = "Ingrese la descripción", @type = "text", @rows = "6", @style = "resize: none;" })
-                                        @Html.ValidationMessageFor(u => u.Descripcion)
-                                    </div>
-                                    @if (ViewBag.EsAdmin && Model != null && Model.IdProyecto > 0)
-                                    {
-                                        <div class="line line-dashed line-lg pull-in"></div>
-                                        <div class="checkbox">
-                                            <label>
-                                                @Html.CheckBoxFor(u => u.Estado)
-                                                Activo
-                                            </label>
-                                            @Html.ValidationMessageFor(u => u.Estado)
-                                        </div>}
-                                    else
-                                    {
-                                        @Html.TextBoxFor(u => u.Estado, new { @value = Model != null ? Model.Estado : false, @type = "hidden" })
-                                    }
-                                    <div class="line line-dashed line-lg pull-in"></div>
-                                    @Html.TextBoxFor(u => u.IdProyecto, new { @value = Model.IdProyecto != 0 ? Model.IdProyecto.ToString() : "", @type = "hidden" })
-                                    @Html.TextBoxFor(u => u.IdEntidadResponsable, new { @value = Model != null ? Model.IdEntidadResponsable.ToString() : "", @type = "hidden" })
-                                    @{var btnName = (Model != null && Model.IdProyecto > 0) ? "Guardar Cambios" : "Crear";}
-                                    <button type="submit" class="btn btn-sm btn-success">@btnName</button>
-                                    <a class="btn btn-sm btn-danger" href="@Url.Action("Entidad", new { id = Model.IdEntidadResponsable })">Salir</a>
+                    <div class="line line-dashed line-lg pull-in"></div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <label>Estado</label>
+                                <div>
+                                    <label class="i-switch m-t-xs m-r">
+                                        <input id="Estado" name="Estado" type="checkbox" value="@Model.Estado" checked="@Model.Estado" onchange="cb=$(this);cb.val(cb.prop('checked'));">
+                                        <i></i>
+                                    </label>
                                 </div>
-                            </section>
+                            </div>
                         </div>
                     </div>
                 }
-            </div>
+                else
+                {
+                    @Html.TextBoxFor(u => u.Estado, new { @value = Model != null ? Model.Estado : false, @type = "hidden" })
+                }
+                <div class="line line-dashed b-b line-lg pull-in"></div>
+                @Html.TextBoxFor(u => u.IdProyecto, new { @value = Model.IdProyecto != 0 ? Model.IdProyecto.ToString() : "", @type = "hidden" })
+                @Html.TextBoxFor(u => u.IdEntidadResponsable, new { @value = Model != null ? Model.IdEntidadResponsable.ToString() : "", @type = "hidden" })
+                var btnName = (Model != null && Model.IdProyecto > 0) ? "Guardar Cambios" : "Crear";
+                <button type="submit" class="btn btn-sm btn-success">@btnName</button>
+                <a class="btn btn-default" href="@Url.Action("Entidad", new { id = Model.IdEntidadResponsable })">Cancelar</a>
+            }
         </div>
-    </section>
-</section>
-
-
-
+    </div>
+</div>
